# ocr

./: .gitignore  CLAUDE.md  PIPELINE.md  README.md  kordoc-2.9.0.tgz  pyproject.toml  run.bat  setup.bat  실행안내.md
chandra/: address.py  extraction.py  food_code.py  foodsafety.py  gemma_judge.py  kordoc.py  label_check.py  law.py  law_attachment.py  law_monitor.py  law_rules.py  license_check.py  nutrition.py  ocr_engines.py  output.py  pipeline.py  preprocess.py  review.py  self_quality.py  settings.py  test_agencies.py  text_match.py  validity.py
chandra/data/: law_watchlist.json  self_quality_required.json  test_agencies.json
chandra/scripts/: quality_review.py  review_app.py  run_review_app.py
chandra_api/: __init__.py  app.py  auth.py  jobs.py  run.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  ui.tsx
frontend/src/components/: AgenciesTab.tsx  BusinessTab.tsx  FoodCodeTab.tsx  LawsTab.tsx  ReviewResult.tsx
tests/: test_address.py  test_law_monitor.py  test_nutrition.py  test_ocr_preprocess.py  test_output_bbox.py  test_pipeline_routing.py  test_qa_features.py  test_review.py  test_self_quality.py  test_test_agencies.py  test_validity.py
참고데이터/: 시험검사기관+현황(게시용)_20260424.xlsx
