[project]
name = "chandra-ocr"
version = "0.2.0"
description = "OCR model that converts documents to markdown, HTML, or JSON."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Datalab", email = "hi@datalab.to"}
]
keywords = ["ocr", "pdf", "markdown", "layout"]
dependencies = [
    "beautifulsoup4>=4.14.2",
    "click>=8.0.0",
    "filetype>=1.2.0",
    "markdownify==1.1.0",
    "openai>=2.2.0",
    "pillow>=10.2.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.11.0",
    "pypdfium2>=4.30.0",
    "python-dotenv>=1.1.1",
    "six>=1.17.0",
]

[project.optional-dependencies]
# 품질검토 웹서비스(백엔드 API + 스캔 OCR) 실행에 필요한 의존성
qa = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    "pyjwt>=2.8.0",
    "bcrypt>=4.0.0",
    "paddleocr>=3.0.0",
    "paddlepaddle>=3.0.0",
    "opencv-contrib-python>=4.10.0",
    "numpy>=1.26.0",
]
hf = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "transformers>=5.2.0",
    "accelerate>=1.11.0",
]
app = [
    "streamlit>=1.50.0",
]
accuracy = [
    "opencv-python-headless>=4.10.0",
]
all = [
    "chandra-ocr[hf,app,accuracy]",
]

[build-system]
requires = ["setuptools>=61"]  # or "setuptools>=61", "flit-core", etc.
build-backend = "setuptools.build_meta"

[project.scripts]
quality-review = "chandra.scripts.quality_review:main"
quality-review-app = "chandra.scripts.run_review_app:main"
quality-review-api = "chandra_api.run:main"

[tool.setuptools.packages.find]
include = ["chandra*"]

[tool.setuptools.package-data]
chandra = ["data/*.json"]

[dependency-groups]
dev = [
    "chandra-ocr[all]",
    "flask>=3.0.0",
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
]
